--- a/doc/apsimx.Rmd
+++ b/doc/apsimx.Rmd
@@ -15,14 +15,22 @@ library(apsimx)
 library(ggplot2)
 ```
 
+```{r apsimx-options, echo = FALSE}
+apsimx_options(warn.versions = FALSE)
+ava <- apsim_version()
+if(is.na(ava[2,2])) stop("Need APSIM-X to create this vignette")
+```
+
 # Introduction
 
-Are you a user of APSIM-X ("Next Generation")? Are you a frequent user of R? Are you hoping for APSIM-X and R to interact with each other? Then the answer is the **apsimx** package, which allows you to inspect, edit, run and read files created by APSIM-X (.apsimx) files. New .apsimx files are based on the JSON (JavaScript Object Notation https://www.json.org/) format and it is used to communicate information to the APSIM-X engine. By using the 'jsonlite' R package **apsimx** can read and write ('inspect' and 'edit') files in this format. The older format based on XML is partially supported through the 'xml2' package. To run simulations the *apsimx* function is available and results from the simulation can be imported as an R object with a dedicated function (*read_apsimx*). If you need to write scripts (regardless of whether you use the **apsimx** package or not) the vignette 'writing scripts' might be useful. The package is currently being developed and available at: https://github.com/femiguez/apsimx. 
+Are you a user of APSIM-X ("Next Generation")? Are you a frequent user of R? Are you hoping for APSIM-X and R to interact with each other? Then the answer is the **apsimx** package, which allows you to inspect, edit, run and read files created by APSIM-X (.apsimx) files. New .apsimx files are based on the JSON (JavaScript Object Notation https://www.json.org/) format and it is used to communicate information to the APSIM-X engine. By using the 'jsonlite' R package **apsimx** can read and write ('inspect' and 'edit') files in this format. APSIM 'Classic' used an XML format and this type is now fully supported ('inspect', 'edit', 'run' and 'read').  For 'inspect' and 'edit' in the APSIM 'Classic' version I use the 'xml2' package. To run simulations the *apsimx* function (*apsim* for 'Classic') is available and results from the simulation can be imported as an R object with a dedicated function (*read_apsimx* 'NG' and *read_apsim* for 'Classic'). If you need to write scripts (regardless of whether you use the **apsimx** package or not) the vignette 'writing scripts' might be useful. The package is currently being developed and available at: https://github.com/femiguez/apsimx. 
 If you have any questions write to: femiguez *at* iastate.edu. 
+
+In part this package is inspired by previous work done by Bryan Stanfill on the 'apsimr' package (available from CRAN and github: https://github.com/stanfill/apsimr). That pacakge made it possible to not only run APSIM from R, but also to perform sensitivity analysis and model emulation using 'GAMS'. However, that package has not been maintained in the last five years and it does not work for the new APSIM-X framework. Another useful R package is 'APSIM', but as with 'apsimr' it has not been updated and it has somewhat of a different functionality. The 'APSIM' package is especially useful for creating weahter ('.met') files for APSIM 'Classic' or 'Next Generation'. 
 
 ### Additional information
 
-Before using this package it is recommended to become familiar with APSIM-X ("Next Generation").
+To install this vignette, you need to have APSIM 'Next Generation' installed. However, if you have not used APSIM it is recommended that you become familiar with it before hand.
 
 See the following for details
 
@@ -34,32 +42,45 @@ See the following for details
 
 This package has been tested on:
 
-**Mac**: ApsimX version 4035
+**Mac**: ApsimX version 4236
 
-**Debian**: ApsimX version 4000
+**Debian**: ApsimX version 4236
 
-**Windows**: ApsimX version 4025
+**Windows**: ApsimX version 4236
 
-Other useful R packages are 'APSIM' and 'apsimr'. The main difference is that these were written to work with the previous generation of APSIM (7.x). This package is thus an update for the new APSIM-X software.
+
 
 ## Installing APSIM-X
 
-For most functions in this pacakge you need to have a version of APSIM-X installed. For this you might first need to install mono (https://www.mono-project.com/download/stable/) and then download and install APSIM-X (https://www.apsim.info/Products/Downloads.aspx). The \code{apsimx} package will try to detect the install of both mono and APSIM-X. 
+For most functions in this pacakge you need to have a version of APSIM-X installed (or APSIM 'Classic'). For Mac and Linux, first you need to install mono (https://www.mono-project.com/download/stable/) and then download and install APSIM-X (https://www.apsim.info/Products/Downloads.aspx). The \code{apsimx} package will try to detect the install of both mono and APSIM-X. 
 
 **Mac**: For Mac it is also assumed that APSIM-X has been moved to 'Applications'.
 
 **Windows**: In Windows the default install location is in 'Program Files'.
+
+**Linux (Debian)**: It assumed that APSIM-X is in '/usr/local/lib/apsim/'.
 
 ## R functions for APSIM-X
 
 The main functions in the package are (for now):
 
 * **inspect_apsimx** simple inspecting of an .apsimx file. (It does not replace the GUI.)
-* **edit_apsimx** edit/modify an .apsimx file. (Limited options are available at the moment).
+* **edit_apsimx** edit/modify an .apsimx file.
 * **apsimx** run an .apsimx simulation.
 * **read_apsimx** read files created by an .apsimx simulation run (.db files)
 * **read_apsimx_all** read all files created by one or more .apsimx simulation runs in a directory (.db files)
-* **inspect_apsimx_replacement** inspect a replacement component of an .apsimx file (JSON only)
+* **inspect_apsimx_replacement** inspect a replacement component of an .apsimx file.
+
+## R functions for APSIM 'Classic' (7.x) - Only for Windows
+
+The main functions relevant for 'Classic' are:
+
+* **apsim** runs an .apsim file.
+* **read_apsim** reads files (.out and .sim) generated by apsim into a data frame.
+* **inspect_apsim** allows for inspection of .apsim file.
+* **edit_apsim** edit an .apsim file.
+* **apsim_example** runs (only a few) of the built-in examples.
+* **apsim_options** sets path for executable, examples and warnings.
 
 ### 'apsimx_exmple': Running a built-in example
 
@@ -75,7 +96,7 @@ ggplot(data = maize , aes(x = Date, y = Maize.AboveGround.Wt)) +
 
 ### 'inspect_apsimx': Inspecting a file
 
-A function to inspect an .apsimx file is included. This is meant to be used simply to avoid the need to use the GUI when a quick inspection of a given component is needed. For example, if you edit a file and want to make sure that the intended component was edited correctly just inspect it. For complex inspections and manipulations of an .apsimx file the GUI is recommended.
+A function to inspect an .apsimx file is included. This is meant to be used simply to avoid the need to use the GUI when a quick inspection of a given component is needed. In addition, it can make it easier to supply the path for editing later (see example below). For example, if you edit a file and want to make sure that the intended component was edited correctly just inspect it. For complex inspections and manipulations of an .apsimx file the GUI is recommended.
 
 ```{r inspect-apsimx}
 ex.dir <- auto_detect_apsimx_examples()
@@ -84,13 +105,13 @@ inspect_apsimx("Maize", src.dir = ex.dir, node = "Weather")
 
 ### 'edit_apsimx': Editing a file
 
-Editing a file has the side effect of creating a new file with '-edited' added to the name to avoid conflict or unintended consequences, but it is also possible to overwrite it. This follows the same style as in the 'apsimr' package. This code does not run an APSIM simulation, it only edits the file. 
+Editing a file has the side effect of creating a new file with '-edited' added to the name to avoid conflict or unintended consequences, but it is also possible to overwrite it. This follows the same style as in the 'apsimr' package. One difference is that it is possible to supply a different 'edit.tag'. This code does not run an APSIM simulation, it only edits the file. 
 
 Let's say we want to modify the values of 'Organic Carbon' in the soil in the 'Maize.apsimx' example. First we should inspect the current values.
 
 ```{r inspect-maize-oc}
 inspect_apsimx("Maize.apsimx", src.dir = ex.dir, node = "Soil",
-               soil.child = "OrganicMatter")
+               soil.child = "Organic")
 ```
 
 The function 'inspect_apsimx', in this example, displays various information about the organic matter in the soil. (See the help page for more options). In the next step we 'edit' or change the values.
@@ -100,8 +121,8 @@ ocs <- c(1.5,1.4,1.3,1.2,1.1,1.0,0.9)
 edit_apsimx("Maize.apsimx", src.dir = ex.dir,
              wrt.dir = ".",
              node = "Soil",
-             soil.child = "OrganicMatter", 
-             parm = "OC", value = ocs)
+             soil.child = "Organic", 
+             parm = "Carbon", value = ocs)
 ```
 
 Let's make sure that we have changed the values successfully.
@@ -109,7 +130,7 @@ Let's make sure that we have changed the values successfully.
 ```{r inspect-maize-oc-check}
 inspect_apsimx("Maize-edited.apsimx", src.dir = ".", 
                node = "Soil",
-               soil.child = "OrganicMatter")
+               soil.child = "Organic")
 ```
 
 Deleting the file.
@@ -124,31 +145,35 @@ file.remove("./Maize-edited.apsimx")
 The proposed workflow is to start by creating an .apsimx file using the GUI. In following steps the goal could be, for example, to either perform sensitivity or uncertainty analysis using R. The funcitons included in this package are aimed at simplifying the process of running a simulation, changing the value of a variable/parameter and running the model again iteratively. Writing complex scripts requires a high level knowledge of both APSIM-X and R, but it is made possible with these tools. This is the proposed workflow:
 
 1. Create a simualtion using the APSIM GUI
-2. Identify variables/parameters that you want to modify (they need to be exposed in the .apsimx XML o JSON file)
-3. Edit the file using 'edit_apsimx'
-4. Run the simulation using 'apsimx'
+2. Identify variables/parameters that you want to modify (they need to be exposed in the .apsimx (JSON) or .apsim (XML) file)
+3. Edit the file using 'edit_apsim(x)'
+4. Run the simulation using 'apsim(x)'
 5. Repeat steps 3 and 4 as needed
-6. Read in the results, possibly using 'read_apsimx'
+6. Read in the results, possibly using 'read_apsim(x)'
 7. Perform visual and statistical analysis on the results
 
 Another proposed more advanced workflow would involve calibrating or optimizing variables given observed data. Additional tools for implementing this type of work will be added in future development.
 
 ```{r apsimx}
 ## One example ('Wheat') is included with the package for the vignette
-ex.dir <- system.file("extdata", package = "apsimx")
-sim <- apsimx("Wheat.apsimx", src.dir = ex.dir, value = "report")
+extd.dir <- system.file("extdata", package = "apsimx")
+sim <- apsimx("Wheat.apsimx", src.dir = extd.dir, value = "report")
 ## Calcualte summary statistics on all variables
 summary(sim)
 ## Plot data
 ggplot(data = sim, aes(x = Date, y = Yield)) + geom_point()
 ## Inspect the Wheat .apsimx file
-inspect_apsimx("Wheat", src.dir = ex.dir, node = "Crop")
-inspect_apsimx("Wheat", src.dir = ex.dir, node = "Manager")
+inspect_apsimx("Wheat.apsimx", src.dir = extd.dir, node = "Crop")
+## This only displays the available 'Manager' components
+inspect_apsimx("Wheat.apsimx", src.dir = extd.dir, node = "Manager")
+## Looking more in-depth into 'SowingRule1'
+inspect_apsimx("Wheat.apsimx", src.dir = extd.dir, 
+               node = "Manager", parm = list("SowingRule1",NA))
 ```
 
-## Inspecting a 'Replacement' component
+## Advanced example: Inspecting a 'Replacement' component
 
-Many additional options in an APSIM-X simulation can be realized through the use of 'Replacements'. For this, there is a function that allows inspection. For this, it is important to know the structure of the 'replacement' but if exploring them, the available components will be displayed. For example, if we want to display the xy pair for the thermal time in the phenology component of the 'Maize' replacement we might go through the following steps:
+Many additional options in an APSIM-X simulation can be realized through the use of 'Replacements'. For this, there is a function that allows inspection. For this, it is important to know the structure of the 'replacement'. It is possible to explore the available components. For example, if we want to display the xy pair for the thermal time in the phenology component of the 'Maize' replacement we might go through the following steps:
 
 State the node ("Maize") and display available components:
 
@@ -201,14 +226,17 @@ inspect_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
                            display.available = FALSE) 
 ```
 
-## Editing a 'Replacement' 
+The function **inspect_apsimx_replacement** can also be used to inspect more complex file structures such as the 'Factorial' example distributed with APSIM-X. See '?inspect_apsimx_replacement'.
+
+## Advanced example: Editing a 'Replacement' 
 
 After using the 'inspect' version of the file editing should be much more straight forward.
 
 ```{r edit-replacement}
 edit_apsimx_replacement("MaizeSoybean.apsimx", src.dir = extd.dir,
                         node = "Maize", node.child = "Phenology",
-                        node.subchild = "ThermalTime", node.subsubchild = "BaseThermalTime",
+                        node.subchild = "ThermalTime", 
+                        node.subsubchild = "BaseThermalTime",
                         parm = "Y", value = c(0,12,20,28,0))
 ```
 
@@ -220,11 +248,47 @@ inspect_apsimx_replacement("MaizeSoybean-edited.apsimx", src.dir = ".",
                             node.subchild = "ThermalTime", parm = c("X","Y")) 
 ```
 
-### File Type (or File Format) Details
+
+## Advanced example: Factorial
+
+The complexity of APSIM-X files can be mind-boggling and it makes it difficult to write robust functions across all tasks that APSIM is able to accomplish. I wrote the 'inspect_apsimx_replacement' and 'edit_apsimx_replacement' specifically to edit replacements but these functions have much more flexibility than 'inspect_apsimx' and 'edit_apsimx'. The function 'apsimx_example' is limited in the number of examples that it is allowed to run, but this does not mean that you cannot run the other examples which are distributed with APSIM-X. Let's take the 'Factorial' example:
+
+If we want to inspect and edit this file, we need the 'inspect_apsimx_replacement' function.
+
+```{r inspect-factorial-0, eval = FALSE}
+## There are multiple 'Experiments' so we need to pick one
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
+                           root = list("Experiment",NA))
+##These positions matched  Experiment   1 2 3 4 5 
+##Error in inspect_apsimx_replacement("Factorial", src.dir = ex.dir, root = ##list("Experiment", : Multiple root nodes found. Please provide a position
+```
+
+```{r inspect-factorial}
+## There are multiple 'Experiments' so we need to pick one
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
+                           root = list("Experiment",1))
+## We need to provide a node
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
+                           root = list("Experiment",1), 
+                           node = "Base", display.available = TRUE)
+## We need to provide a node child
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
+                           root = list("Experiment",1), 
+                           node = "Base", node.child = "Clock",
+                           display.available = TRUE)
+```
+
+Here we stopped at this level but it is possible to dig deeper using 'node.subchild' and 'node.subsubchild'. It is not possible at this point to dig deeper in the hierarchy level.
+
+### Running the 'Factorial' example
+
+I won't be running the 'Factorial' example here, but if you are interested this is done in the folder 'tests' in the pacakge. 
+
+# File Type (or File Format) Details
 
 APSIM has traditionally generated files that produce simulations using an XML schema. This has been used with APSIM versions of 7.x. With APSIM-X a new format based on JSON files has been implemented and apparently both formats will be supported for the forseeable future. JSON files is less verbose and it is associated with better performance. All distributed APSIM-X examples are 'JSON' now.
 
-The \code{apsimx} package supports inspection and editing of both file types for most components except for the 'Manager'; for which there is partial support. In most instances the parameters that are likely to need inspection and editing are supported but more features will be added in the future as needed. It is possible to test whether a file is XML or JSON.
+The apsimx package supports inspection and editing of both file types, but XML is for 'Classic' only and JSON is for APSIM-X. In most instances the parameters that are likely to need inspection and editing are supported but more features will be added in the future as needed. It is possible to test whether a file is XML or JSON (note: this is fragile and might not even be needed in the future).
 
 ```{r filetypes}
 ex.dir <- auto_detect_apsimx_examples()
@@ -234,9 +298,64 @@ extd.dir <- system.file("extdata", package = "apsimx")
 apsimx_filetype("Maize_old", src.dir = extd.dir)
 ```
 
+It is possible that the function above will soon be obsolete as all .apsimx files are JSON and all .apsim files are XML. 
+
+# Why inspect?
+
+One of the difficulties with working with APSIM(X) in scripting efforts is that the names of the parameters that we might want to edit can be buried deep in the .apsim(x) file and that there might be multiple instances of those parameters. To overcome this (to some extent) the 'inspect' functions can provide the path to the parameter to edit. For example,
+
+```{r Millet}
+extd.dir <- system.file("extdata", package = "apsimx")
+inspect_apsim("Millet.apsim", src.dir = extd.dir, node  = "Manager")
+```
+
+We can see that we have 'Sow on a fixed date' as one of the options. Let's say that we want to edit the planting density
+
+```{r Millet-sow}
+inspect_apsim("Millet.apsim", src.dir = extd.dir, node  = "Manager",
+              parm = list("Sow on a fixed date",NA))
+```
+
+Planting density is the fifth element in that table. We can obtain the full path by using the 'print.path' option. It makes sense to use this option once you have found the parameter you are looking for. 
+
+```{r Millet-sow-plt-dens}
+inspect_apsim("Millet.apsim", src.dir = extd.dir, node  = "Manager",
+              parm = list("Sow on a fixed date",5), print.path = TRUE)
+## Or store it in an object for later editing
+pp <- inspect_apsim("Millet.apsim", src.dir = extd.dir, node  = "Manager",
+              parm = list("Sow on a fixed date",5), print.path = TRUE)
+```
+
+Once we have identified the parameter we want to edit, we can do so using the 'edit_apsim' function. When using the 'parm.path' argument, node should be "Other".
+
+```{r Millet-edit}
+edit_apsim("Millet", src.dir = extd.dir, node = "Other",
+           parm.path = pp, value = 8, edit.tag = "-pp")
+```
+
+```{r Millet-delete}
+file.remove("Millet-pp.apsim")
+```
+
+This provides a template for creating complex simulations out of simple ones.
+
+# To-Do
+
+* **inspect_apsimx_replacement** challenge this function with more complex
+examples
+
+* Add more tests using the 'CoverCrop example' (APSIM 'Classic'). This would be the motivation for writing a function for 'factorials'. 'edit_apsimx_factorial'.
+
+* Include parameter estimation example for maize
+
+# In Beta
+
+* edit_apsimx_batch (never tested)
+
 # Future features
 
-* Currently working on developing 'inspect_apsimx_replacement' (JSON only)
-* Create function 'edit_apsimx_replacement' (JSON only)
+* Do we need a custom function for editing the depth of the soil profile? 'edit_apsimx_depth'? The issue really is what kind of inconsistencies are possible if depth is not consistent across variables because it is possible to edit the depth now.
+
 * Improve implementation of read_apsimx_all 
+
 * Add tools for optimization and sensitivity analysis.
