--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -112,8 +112,8 @@ ggplot(data = maize , aes(x = Date, y = Maize.AboveGround.Wt)) +
 A function to inspect an .apsimx file is included. This is meant to be used simply to avoid the need to use the GUI when a quick inspection of a given component is needed. In addition, it can make it easier to supply the path for editing later (see example below). For example, if you edit a file and want to make sure that the intended component was edited correctly just inspect it. For complex inspections and manipulations of an .apsimx file the GUI is recommended.
 
 ```{r inspect-apsimx}
-ex.dir <- auto_detect_apsimx_examples()
-inspect_apsimx("Maize", src.dir = ex.dir, node = "Weather")
+extd.dir <- system.file("extdata", package = "apsimx")
+inspect_apsimx("Maize", src.dir = extd.dir, node = "Weather")
 ```
 
 ### 'edit_apsimx': Editing a file
@@ -123,7 +123,7 @@ Editing a file has the side effect of creating a new file with '-edited' added t
 Let's say we want to modify the values of 'Organic Carbon' in the soil in the 'Maize.apsimx' example. First we should inspect the current values.
 
 ```{r inspect-maize-oc}
-inspect_apsimx("Maize.apsimx", src.dir = ex.dir, node = "Soil",
+inspect_apsimx("Maize.apsimx", src.dir = extd.dir, node = "Soil",
                soil.child = "Organic")
 ```
 
@@ -131,7 +131,7 @@ The function 'inspect_apsimx', in this example, displays various information abo
 
 ```{r edit-maize-oc}
 ocs <- c(1.5,1.4,1.3,1.2,1.1,1.0,0.9)
-edit_apsimx("Maize.apsimx", src.dir = ex.dir,
+edit_apsimx("Maize.apsimx", src.dir = extd.dir,
              wrt.dir = ".",
              node = "Soil",
              soil.child = "Organic", 
@@ -160,10 +160,20 @@ The proposed workflow is to start by creating an .apsimx file using the GUI. In 
 
 Another proposed more advanced workflow would involve calibrating or optimizing variables given observed data. Additional tools for implementing this type of work will be added in future development.
 
+## Wheat Example
+
+The 'Wheat' example is distributed with the 'apsimx' package.
+
 ```{r apsimx-wheat, eval = FALSE}
-## One example ('Wheat') is included with the package for the vignette
-extd.dir <- system.file("extdata", package = "apsimx")
 sim <- apsimx("Wheat.apsimx", src.dir = extd.dir, value = "report")
+```
+
+If you have APSIM-X installed you can also run it in this way.
+```{r apsimx-wheat, eval = FALSE}
+ex.dir <- auto_detect_apsimx_examples()
+## Copy 'Wheat' file to your current directory
+file.copy(paste0(ex.dir,"/","Wheat.apsimx"),".")
+sim <- apsimx("Wheat.apsimx")
 ```
 
 ```{r apsimx-wheat-read, echo = FALSE}
@@ -302,9 +312,7 @@ APSIM has traditionally generated files that produce simulations using an XML sc
 The apsimx package supports inspection and editing of both file types, but XML is for 'Classic' only and JSON is for APSIM-X. In most instances the parameters that are likely to need inspection and editing are supported but more features will be added in the future as needed. It is possible to test whether a file is XML or JSON (note: this is fragile and might not even be needed in the future).
 
 ```{r filetypes}
-ex.dir <- auto_detect_apsimx_examples()
-apsimx_filetype("Barley", src.dir = ex.dir)
-extd.dir <- system.file("extdata", package = "apsimx")
+apsimx_filetype("Wheat.apsimx", src.dir = extd.dir)
 ## This is an older XML 'Maize' file which is no longer distributed
 apsimx_filetype("Maize_old", src.dir = extd.dir)
 ```
@@ -316,7 +324,6 @@ It is possible that the function above will soon be obsolete as all .apsimx file
 One of the difficulties with working with APSIM(X) in scripting efforts is that the names of the parameters that we might want to edit can be buried deep in the .apsim(x) file and that there might be multiple instances of those parameters. To overcome this (to some extent) the 'inspect' functions can provide the path to the parameter to edit. For example,
 
 ```{r Millet}
-extd.dir <- system.file("extdata", package = "apsimx")
 inspect_apsim("Millet.apsim", src.dir = extd.dir, node  = "Manager")
 ```
 
